# cmake-package

./: .editorconfig  .gitignore  README.md
math/: CMakeLists.txt  math.cc  math.h
math/cmake/: FindDIV.cmake  math-config.cmake.in  math.pc.in  package.cmake
module_a/: CMakeLists.txt  add.cc  add.h
module_a/cmake/: add-config.cmake.in  add.pc.in  package.cmake
module_a/scripts/: postinst  postrm  preinst  prerm
module_b/: CMakeLists.txt  sub.cc  sub.h
module_b/cmake/: package.cmake  sub-config.cmake.in  sub.pc.in
module_c/: CMakeLists.txt  div.cc  div.h
module_c/cmake/: div.pc.in  package.cmake
test/: CMakeLists.txt  main.cc
